feat:get tag by name
also allow tag api to return associated seals
