# src/api/tags/tagController.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Path, Route, Tags } from "tsoa";
+import { Controller, Get, Path, Query, Route, Tags } from "tsoa";
 import { Tag } from "./tagModel";
 import { TagService } from "./tagService";
 
@@ -6,12 +6,30 @@ import { TagService } from "./tagService";
 @Tags("Tags")
 export class TagController extends Controller {
   /**
-   * Get a Specific Tag
+   * Get a Specific Tag by ID
    * @param id Id of a tag
+   * @param includeSeals Boolean to include associated Seals
    * @returns {Tag} Data for a Tag
    */
-  @Get("{id}")
-  public async getTag(@Path() id?: number): Promise<Tag> {
-    return new TagService().get(id);
+  @Get("/id/{id}")
+  public async getTag(
+    @Path() id?: number,
+    @Query() includeSeals?: boolean
+  ): Promise<Tag> {
+    return new TagService().get(id, undefined, includeSeals);
+  }
+
+  /**
+   * Get a Specific Tag by ID
+   * @param name Name of a tag
+   * @param includeSeals Boolean to include associated Seals
+   * @returns {Tag} Data for a Tag
+   */
+  @Get("/tag/{name}")
+  public async getTagByName(
+    @Path() name?: string,
+    @Query() includeSeals?: boolean
+  ): Promise<Tag> {
+    return new TagService().get(undefined, name, includeSeals);
   }
 }
