# src/api/tags/tagModel.ts
@@ -1,4 +1,7 @@
+import { Seal } from "../seals/sealApiModel";
+
 export interface Tag {
   id: number;
   name: string;
+  seals: Seal[];
 }
