# src/api/tags/tagService.ts
@@ -1,15 +1,18 @@
 import { Tag } from "./tagModel";
 import { prisma } from "app";
-export type TagCreationParams = Pick<Tag, "name">
+export type TagCreationParams = Pick<Tag, "name">;
 
 export class TagService {
-  async get(id?: number, name?: string): Promise<Tag> {
+  async get(id?: number, name?: string, includeSeals?: boolean): Promise<Tag> {
     const tag = await prisma.tag.findFirst({
       where: {
         id: id,
-        name: name
-      }
-    })
-    return tag as Tag
+        name: name,
+      },
+      include: {
+        seals: includeSeals,
+      },
+    });
+    return tag as Tag;
   }
 }
